@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when the overlay background is (somehow) destroyed. (#35)
 ---------------------------------------------------------------------------------------------------
 Version: 2.2.1
 Date: 2024-03-29
